--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>感情分析デモ</title>
+    
+    <!-- ★以下の3行を追加してください -->
+    <script>
+      window.global = window;
+    </script>
+    <!-- 追加ここまで -->
+
   </head>
   <body>
     <div id="root"></div>
